--- a/Back End/.env-example
+++ b/Back End/.env-example
@@ -1,6 +1,6 @@
-PORT=8080
+PORT=7500
 HOST=localhost
 DB_HOST=localhost
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+DB_USER=root
+DB_PASSWORD=''
+DB_NAME=ecommerce
