--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "atob": "^2.1.2",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "install": "^0.13.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "passport-jwt": "^4.0.0",
     "sequelize": "^6.6.2",
-    "nodemon": "^2.0.7",
-    "uuid": "^8.3.2",
-    "install": "^0.13.0"
+    "uuid": "^8.3.2"
   }
 }
